Fixed the Ticketek image overlapping

--- a/css/themes.css
+++ b/css/themes.css
@@ -395,21 +395,21 @@
 		
 		@media (min-width: 569px) {
 			.portfolio .ticketek-site img {
-				right: -190px;
+				left: 0px;
 				top: -240px;
 			}
 		}
 		
 		@media (min-width: 740px) {
 			.portfolio .ticketek-site img {
-				right: 0px;
+				left: 150px;
 				top: -80px;
 			}
 		}
 		
 		@media (min-width: 1100px) {
 			.portfolio .ticketek-site img {
-				right: 0px;
+				left: 300px;
 				top: 20px;
 			}
 		}
